Fix z-index for pages

--- a/web/app/themes/visithalland/resources/assets/styles/components/_icons.scss
+++ b/web/app/themes/visithalland/resources/assets/styles/components/_icons.scss
@@ -920,8 +920,8 @@
 }
 
 .icon--sm {
-	width:  12px;
-	height: 12px;
+	width:  14px;
+	height: 14px;
 }
 
 .icon--md {
