--- a/web/app/themes/visithalland/resources/assets/styles/happening/_happening-list-item.scss
+++ b/web/app/themes/visithalland/resources/assets/styles/happening/_happening-list-item.scss
@@ -22,7 +22,7 @@
 	&__date {
 		position:absolute;
 		top:-$space-1;
-		left:0;
+		left:-$space-1;
 	}
 	&__content {
 		position:relative;
